expand MDX components with <ol>, <ul>, <a>, <p>

--- a/pages/markdown.mdx
+++ b/pages/markdown.mdx
@@ -1,1 +1,26 @@
-# Hello World
+import { styled } from "../stitches.config.js";
+import Layout from "../components/layout/Layout.js";
+
+<Layout>
+
+# Case Study
+
+## Inleiding
+
+[Jouw Omgeving](https://www.jouwomgeving.nl/) beschikt over een diverse set aan zorginhoudelijke modules. Deze kunnen via een e-Health platform aangeboden worden door de zorgprofessional op het moment dat het passend is in de behandeling of begeleiding van de cliënt. Voorafgaand aan een traject om cliënten en netwerk te informeren, als aanvulling op een lopende behandeling of als naslagwerk en steun tijdens de nazorg.
+
+In de afgelopen jaren zijn er in samenwerking met verschillende auteurs, zorgorganisaties en illustrators veel mooie modules ontwikkelt. Het ontwikkelproces is echter erg arbeidsintensief en twee jaar geleden merkten we dat de huidige werkwijze op verschillende fronten steeds minder voldeed aan de wensen en eisen van de betrokken stakeholders. Het was tijd voor een nieuwe werkwijze om duurzaam zorginhoudelijke modules te kunnen blijven ontwikkelen.
+
+Deze case study geeft inzicht in hoe we een interne applicatie ontwikkelt hebben waarmee informatie, kennis, werkvormen en protocollen uit zorgorganisaties samen met de klant, op maat en zonder technische kennis omgezet kunnen worden in toegankelijke en gebruiksvriendelijke modules.
+
+- De verkopers - Bij zorgorganisaties ligt steeds meer de nadruk op kostenbesparing en efficiëntie. Door lagere investeringsbudgetten geven organisaties niet zomaar meer grote bedragen uit om zorginhoudelijke modules te laten realiseren. Het is, mede gezien het maatwerk dat ermee gemoeid is, steeds moeilijker om een duurzame business case te maken.
+- De bouwers - Met de ontwikkeling is veel maatwerk gemoeid. Ongeveer 70% van de kosten wordt veroorzaakt door technische ontwikkel uren, omdat elke module grotendeels opnieuw in code wordt opgebouwd. Hierdoor ontstaat er een bottleneck rondom de (schaarse) capaciteit van developers en kan er niet parallel aan meerdere modules tegelijkertijd ontwikkelt worden. Het resultaat is een lange doorlooptijd en een hoge kostprijs in relatie tot de gemiddelde levensduur en opbrengsten.
+- De gebruikers - Onze huidige zorginhoudelijke modules zijn door gebruikte interactiepatronen en verouderde technieken niet goed bruikbaar (te maken) voor mobiele apparaten. Dit zorgt in het huidige mobiele tijdperk voor een suboptimale gebruikerservaring op apparaten met een kleinere resolutie. De gebruikte user interface elementen voldoen tevens niet aan de standaarden voor toegankelijkheid.
+
+1. Item A
+2. Item B
+3. Item C
+
+[Link text Here](https://link-url-here.org)
+
+</Layout>
