add image component to MDX

--- a/pages/markdown.mdx
+++ b/pages/markdown.mdx
@@ -5,6 +5,8 @@ import Layout from "../components/layout/Layout.js";
 
 # Case Study
 
+![Alt text](/images/card-placeholder.png)
+
 ## Inleiding
 
 [Jouw Omgeving](https://www.jouwomgeving.nl/) beschikt over een diverse set aan zorginhoudelijke modules. Deze kunnen via een e-Health platform aangeboden worden door de zorgprofessional op het moment dat het passend is in de behandeling of begeleiding van de cliënt. Voorafgaand aan een traject om cliënten en netwerk te informeren, als aanvulling op een lopende behandeling of als naslagwerk en steun tijdens de nazorg.
