WIP personal page

--- a/pages/markdown.mdx
+++ b/pages/markdown.mdx
@@ -5,11 +5,11 @@ import Layout from "../components/layout/Layout.js";
 
 # Case Study
 
-![Alt text](/images/card-placeholder.png)
-
 ## Inleiding
 
 [Jouw Omgeving](https://www.jouwomgeving.nl/) beschikt **over** een diverse set aan zorginhoudelijke modules. Deze kunnen via een e-Health platform aangeboden worden door de zorgprofessional op het moment dat het passend is in de behandeling of begeleiding van de cliënt. Voorafgaand aan een traject om cliënten en netwerk te informeren, als aanvulling op een lopende behandeling of als naslagwerk en _steun tijdens de nazorg_.
+
+![Alt text](/images/placeholder-blog.jpg)
 
 In de afgelopen jaren zijn er in samenwerking met verschillende auteurs, zorgorganisaties en illustrators veel mooie modules ontwikkelt. Het ontwikkelproces is echter erg arbeidsintensief en twee jaar geleden merkten we dat de huidige werkwijze op verschillende fronten steeds minder voldeed aan de wensen en eisen van de betrokken stakeholders. Het was tijd voor een nieuwe werkwijze om duurzaam zorginhoudelijke modules te kunnen blijven ontwikkelen.
 
