add variant to ContentBlock component

--- a/pages/markdown.mdx
+++ b/pages/markdown.mdx
@@ -1,9 +1,12 @@
 import { styled } from "../stitches.config.js";
-import Layout from "../components/layout/Layout.js";
+import Layout from "../components/layouts/Layout.js";
+import ContentBlock from "../components/layouts/blocks/ContentBlock.js"
 
 <Layout>
 
 # Case Study
+
+<ContentBlock heading="Dit is een titel" description="In de afgelopen jaren zijn er in samenwerking met verschillende auteurs, zorgorganisaties en illustrators veel mooie modules ontwikkelt." />
 
 ## Inleiding
 
