--- a/pages/markdown.mdx
+++ b/pages/markdown.mdx
@@ -1,6 +1,8 @@
 import { styled } from "../stitches.config.js";
 import Layout from "../components/layouts/Layout.js";
+import Header from "../components/header/Header.js";
 
+<Header />
 <Layout>
 
 # Case Study
