basic version of code syntax highlighter with prism.js

--- a/pages/Chapter1.mdx
+++ b/pages/Chapter1.mdx
@@ -4,7 +4,7 @@ import StyledLink from "../components/StyledLink.js";
 
 Since the web came into existence in 1989, it has steadily `evolved` into an ecosystem of large, corporate-controlled, centralised mega-platforms often referred to as *“privately owned walled gardens”*. Driven by capitalism, a few big players control the lion’s share of society’s assets and extract the most value. A prime example of the stranglehold companies have over our digital lives is the cloud market, where only four companies own 67% of the global market. Yet, in many ways, these mega-platforms are a positive development. They significantly improved usability and enabled billions of people to discover, create and publish content for near *zero marginal cost* without becoming experts on the underlying protocols.
 
-```js
+```Javascript
 const Title = styled("h2", {
   fontSize: "$3xl",
   fontWeight: "$extra-bold",
