WIP case study page

--- a/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/4-anatomie-van-modules.mdx
+++ b/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/4-anatomie-van-modules.mdx
@@ -1,7 +1,7 @@
 ## De anatomie van modules
 
-Om de ontwikkeling van e-Health content te kunnen standaardiseren, is het van belang om te weten uit welke onderdelen deze bestaat. Wij vonden inspiratie in de _atomic design_ _methodology_ van \*_(Brad Frost, 2013), waarin hij parallellen trekt tussen scheikunde en het ontwerpen van interfaces. De gedachte is dat alle materie _(vast, vloeibaar, gas)\* bestaat uit atomen. Deze atomen binden zich aan elkaar om moleculen te vormen, die op hun beurt weer gecombineerd worden tot meer complexe organismen om uiteindelijk alle materie in ons universum te creëren.
+Om de ontwikkeling van e-Health content te kunnen standaardiseren, is het van belang om te weten uit welke onderdelen deze bestaat. Wij vonden inspiratie in de [atomic design methodology](https://atomicdesign.bradfrost.com/chapter-2/) van _(Brad Frost, 2013)_, waarin hij parallellen trekt tussen scheikunde en het ontwerpen van interfaces. De gedachte is dat alle materie _(vast, vloeibaar, gas)_ bestaat uit atomen. Deze atomen binden zich aan elkaar om moleculen te vormen, die op hun beurt weer gecombineerd worden tot meer complexe organismen om uiteindelijk alle materie in ons universum te creëren.
 
 Zorginhoudelijke modules bestaan ook uit verschillende kleinere componenten. Dit betekent dat we volledige modules kunnen analyseren en opsplitsen in fundamentele bouwblokken. Na een uitgebreide analyse van verschillende oude zorg modules hebben we een onderscheid gemaakt in zes verschillende niveaus.
 
-Met behulp van dit mentale model kunnen we van abstract naar concreet redeneren en een duidelijk onderscheid maken tussen de visuele weergave, de functionele elementen en de onderliggende datastructuur van een zorginhoudelijk module. Op basis van dit framework kon er een systeem ontworpen worden die consistentie, modulariteit en schaalbaarheid bevordert.
+
