--- a/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/2-probleem-definitie.mdx
+++ b/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/2-probleem-definitie.mdx
@@ -12,12 +12,13 @@ Passende zorginhoudelijke e-Health content ontwikkelen is complex. Uit onze erva
 
 Ook na de oplevering vergt een module de nodige aandacht. Gedurende de product levenscyclus komen er verzoeken voor wijziging binnen of ontstaan er technische _bugs_ die opgelost moeten worden. Na 5 tot 7 jaar is de techniek verouderd en de inhoud achterhaald door nieuwe (wetenschappelijke) inzichten. Het is dan kiezen uit twee kwaden: de technische ondersteuning volledig stopzetten en de module uitfaseren of een nieuwe investering doen om het programma volgens de nieuwste (wetenschappelijke) inzichten en technieken op te bouwen.
 
-Door middel van een uitgebreide analyse hebben we voor elke fase in de product levenscyclus van een zorginhoudelijke modules in kaart gebracht wat de pijnpunten zijn:
+### Pijnpunten
+
+Door middel van een uitgebreide analyse hebben we voor elke fase in de product levenscyclus van een zorginhoudelijke modules in kaart gebracht wat de pijnpunten zijn.
 
 <Accordion
   style={{ paddingBottom: "32px" }}
   type="single"
-  defaultValue="item-1"
   collapsible
 >
   <AccordionItem value="item-1">
