--- a/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/6-systeem-blauwdruk.mdx
+++ b/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/6-systeem-blauwdruk.mdx
@@ -6,7 +6,7 @@ import {
 } from "../../../components/accordion/Accordion.js";
 import Paragraph from "../../../components/typography/Paragraph.js";
 
-## De systeem blauwdruk
+## Systeem blauwdruk
 
 De systeem architectuur is een (visuele) beschrijving die inzicht geeft in hoe verschillende componenten van het systeem in elkaar passen en tot elkaar samenhangen. Op basis van onze ervaringen met het ontwikkelen van software in het zorglandschap en de (on)mogelijkheden van het huidige Jouw Omgeving platform hebben we de systeem architectuur gebaseerd op de volgende uitgangspunten:
 
