--- a/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/2-probleem-definitie.mdx
+++ b/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/2-probleem-definitie.mdx
@@ -14,7 +14,7 @@ Ook na de oplevering vergt een module de nodige aandacht. Gedurende de product l
 
 ### Pijnpunten
 
-Door middel van een uitgebreide analyse hebben we voor elke fase in de product levenscyclus van een zorginhoudelijke modules in kaart gebracht wat de pijnpunten zijn.
+Door middel van een uitgebreide analyse hebben we voor elke fase in de product levenscyclus van een zorginhoudelijke modules in kaart gebracht wat de pijnpunten zijn voor de betrokken stakeholders.
 
 <Accordion
   style={{ paddingBottom: "32px" }}
@@ -22,7 +22,7 @@ Door middel van een uitgebreide analyse hebben we voor elke fase in de product l
   collapsible
 >
   <AccordionItem value="item-1">
-    <AccordionTrigger title="Verkoopfase" src="/icons/money.svg" />
+    <AccordionTrigger title="Verkopers" src="/icons/money.svg" />
     <AccordionContent>
       <div style={{ display: "flex", flexDirection: "column", gap: "12px" }}>
         <ListItem
@@ -39,7 +39,7 @@ Door middel van een uitgebreide analyse hebben we voor elke fase in de product l
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-2">
-    <AccordionTrigger title="Bouwfase" src="/icons/hammer-line.svg" />
+    <AccordionTrigger title="Bouwers" src="/icons/hammer-line.svg" />
     <AccordionContent>
       <div style={{ display: "flex", flexDirection: "column", gap: "12px" }}>
         <ListItem
@@ -61,7 +61,7 @@ Door middel van een uitgebreide analyse hebben we voor elke fase in de product l
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-3">
-    <AccordionTrigger title="Gebruiksfase" src="/icons/smartphone.svg" />
+    <AccordionTrigger title="Gebruikers" src="/icons/smartphone.svg" />
     <AccordionContent>
       <div style={{ display: "flex", flexDirection: "column", gap: "12px" }}>
         <ListItem
@@ -78,7 +78,7 @@ Door middel van een uitgebreide analyse hebben we voor elke fase in de product l
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-4">
-    <AccordionTrigger title="Onderzoeksfase" src="/icons/search-eye-line.svg" />
+    <AccordionTrigger title="Onderhouders" src="/icons/settings-line.svg" />
     <AccordionContent>
       <div style={{ display: "flex", flexDirection: "column", gap: "12px" }}>
         <ListItem
@@ -95,7 +95,7 @@ Door middel van een uitgebreide analyse hebben we voor elke fase in de product l
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-5">
-    <AccordionTrigger title="Onderhoudsfase" src="/icons/settings-line.svg" />
+    <AccordionTrigger title="Onderzoekers" src="/icons/search-eye-line.svg" />
     <AccordionContent>
       <div style={{ display: "flex", flexDirection: "column", gap: "12px" }}>
         <ListItem
