--- a/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/1-inleiding.mdx
+++ b/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/1-inleiding.mdx
@@ -5,3 +5,5 @@
 In de afgelopen jaren zijn er in samenwerking met verschillende auteurs, zorgorganisaties en illustrators veel mooie modules ontwikkelt. Het ontwikkelproces is echter erg arbeidsintensief en twee jaar geleden merkten we dat de huidige werkwijze op verschillende fronten steeds minder voldeed aan de wensen en eisen van de betrokken stakeholders. Het was tijd voor een nieuwe werkwijze om duurzaam zorginhoudelijke modules te kunnen blijven ontwikkelen.
 
 Deze case study geeft inzicht in hoe we een interne applicatie ontwikkelt hebben waarmee informatie, kennis, werkvormen en protocollen uit zorgorganisaties samen met de klant, op maat en zonder technische kennis omgezet kunnen worden in toegankelijke en gebruiksvriendelijke modules.
+
+laljala ik hoef niet na te denken over hoe dit eruit komt te zien.
