--- a/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/6-systeem-blauwdruk.mdx
+++ b/pages/projects/gestandaardiseerde-ehealth-modules-ontwikkelen/6-systeem-blauwdruk.mdx
@@ -21,7 +21,8 @@ De systeem architectuur is een (visuele) beschrijving die inzicht geeft in hoe v
       src="/icons/money.svg"
     />
     <AccordionContent>
-      <p>In het zorglandschap kan je niet ontkomen aan maatwerkoplossingen. Door
+      <p>
+        In het zorglandschap kan je niet ontkomen aan maatwerkoplossingen. Door
         de sterk uiteenlopende context waarin e-health content 'geconsumeerd'
         wordt, is er altijd een vorm van maatwerk nodig om goed aan te kunnen
         sluiten op de wensen van auteurs en de kenmerken van specifieke
@@ -29,7 +30,8 @@ De systeem architectuur is een (visuele) beschrijving die inzicht geeft in hoe v
         afbeeldingen, waar doelgroep B baat heeft bij veel uitleg in combinatie
         met korte opdrachten. Het systeem moet daarom modulair opgezet worden,
         zodat het verschillende scenario's kan ondersteunen en op maat inricht
-        kan worden.</p>
+        kan worden.
+      </p>
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-2">
@@ -38,7 +40,21 @@ De systeem architectuur is een (visuele) beschrijving die inzicht geeft in hoe v
       src="/icons/hammer-line.svg"
     />
     <AccordionContent>
-      <p>Het Jouw Omgeving platform beschikt over een gelaagde rechten structuur die het mogelijk maakt om binnen één systeem integraal samen te werken. Transparantie voor de cliënt staat hierin centraal. De cliënt ziet in de eigen omgeving altijd alle informatie die op hem of haar betrekking heeft. Andere gebruikers kunnen gekoppeld worden aan deze cliënt met een van de andere autorisatieniveaus. Het niveau bepaalt wat deze gebruiker in mag zien en welke acties hij of zij mag uitvoeren in de omgeving van de cliënt. Het rechten systeem van Jouw Omgeving kent vier niveaus van autorisatie, waarbij een gebruiker met niveau 1 veel gegevens mag inzien en bewerken en een gebruiker met niveau 4 beperkte rechten heeft. Binnen de editor moet deze rechten structuur aan te roepen zijn, zodat e-health content gecreeërd kan worden waarin gebruikers alleen participeren op de onderwerpen die voor hen relevant zijn.</p>
+      <p>
+        Het Jouw Omgeving platform beschikt over een gelaagde rechten structuur
+        die het mogelijk maakt om binnen één systeem integraal samen te werken.
+        Transparantie voor de cliënt staat hierin centraal. De cliënt ziet in de
+        eigen omgeving altijd alle informatie die op hem of haar betrekking
+        heeft. Andere gebruikers kunnen gekoppeld worden aan deze cliënt met een
+        van de andere autorisatieniveaus. Het niveau bepaalt wat deze gebruiker
+        in mag zien en welke acties hij of zij mag uitvoeren in de omgeving van
+        de cliënt. Het rechten systeem van Jouw Omgeving kent vier niveaus van
+        autorisatie, waarbij een gebruiker met niveau 1 veel gegevens mag inzien
+        en bewerken en een gebruiker met niveau 4 beperkte rechten heeft. Binnen
+        de editor moet deze rechten structuur aan te roepen zijn, zodat e-health
+        content gecreeërd kan worden waarin gebruikers alleen participeren op de
+        onderwerpen die voor hen relevant zijn.
+      </p>
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-3">
@@ -47,7 +63,15 @@ De systeem architectuur is een (visuele) beschrijving die inzicht geeft in hoe v
       src="/icons/smartphone.svg"
     />
     <AccordionContent>
-      <p>Inhoud moet flexibel aan- en uit te zetten zijn voor een gebruiker. Een behandelprotocol wordt vaak stapsgewijs ingevuld door cliënten. Een gebruiker met zorg regie moet de mogelijkheid hebben om inhoud op het juiste moment in het traject open- en/of dicht te kunnen zetten. Op deze manier ziet de cliënt alleen informatie en opdrachten die op dat moment in de behandeling relevant zijn en belast je de cliënt niet meer dan nodig.</p>
+      <p>
+        Inhoud moet flexibel aan- en uit te zetten zijn voor een gebruiker. Een
+        behandelprotocol wordt vaak stapsgewijs ingevuld door cliënten. Een
+        gebruiker met zorg regie moet de mogelijkheid hebben om inhoud op het
+        juiste moment in het traject open- en/of dicht te kunnen zetten. Op deze
+        manier ziet de cliënt alleen informatie en opdrachten die op dat moment
+        in de behandeling relevant zijn en belast je de cliënt niet meer dan
+        nodig.
+      </p>
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-4">
@@ -56,7 +80,18 @@ De systeem architectuur is een (visuele) beschrijving die inzicht geeft in hoe v
       src="/icons/search-eye-line.svg"
     />
     <AccordionContent>
-    <p>In de praktijk worden er vaak verschillende versies van een programma aangeboden aan cliënten. Alhoewel de inhoud voor elke versie (bijna) hetzelfde is, ligt het accent, afhankelijk van de problematiek, vaak op specifieke onderdelen van het totale programma. Niet alle inhoud is daarom even relevant voor elke gebruiker. Door met varianten te werken, krijgt de gebruiker alleen informatie en inhoud te zien die specifiek op hem of haar is afgestemd. Een variant toont dus een subset van het totale programma aan de gebruiker. Door met varianten te werken kan je vanuit een single source of truth werken en voorkom je dat je alle modules los moet onderhouden. </p>
+      <p>
+        In de praktijk worden er vaak verschillende versies van een programma
+        aangeboden aan cliënten. Alhoewel de inhoud voor elke versie (bijna)
+        hetzelfde is, ligt het accent, afhankelijk van de problematiek, vaak op
+        specifieke onderdelen van het totale programma. Niet alle inhoud is
+        daarom even relevant voor elke gebruiker. Door met varianten te werken,
+        krijgt de gebruiker alleen informatie en inhoud te zien die specifiek op
+        hem of haar is afgestemd. Een variant toont dus een subset van het
+        totale programma aan de gebruiker. Door met varianten te werken kan je
+        vanuit een single source of truth werken en voorkom je dat je alle
+        modules los moet onderhouden.{" "}
+      </p>
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-5">
@@ -65,7 +100,14 @@ De systeem architectuur is een (visuele) beschrijving die inzicht geeft in hoe v
       src="/icons/settings-line.svg"
     />
     <AccordionContent>
-      <p>Door gebruik te maken van (data) standaarden worden producten veerkrachtiger. Voor software betekent dit dat producten beter onderhoudbaar en eenvoudiger uit te breiden zijn, maar ook dat data makkelijker gestructureerd geëxporteerd kan worden voor onderzoeksdoeleinden. Dit resulteert in een meer toekomstbestendig product. </p>
+      <p>
+        Door gebruik te maken van (data) standaarden worden producten
+        veerkrachtiger. Voor software betekent dit dat producten beter
+        onderhoudbaar en eenvoudiger uit te breiden zijn, maar ook dat data
+        makkelijker gestructureerd geëxporteerd kan worden voor
+        onderzoeksdoeleinden. Dit resulteert in een meer toekomstbestendig
+        product.{" "}
+      </p>
     </AccordionContent>
   </AccordionItem>
   <AccordionItem value="item-6">
