style markdown block-quote element

--- a/pages/blog/building-a-second-brain-as-networked-thinking-tool/01-content.mdx
+++ b/pages/blog/building-a-second-brain-as-networked-thinking-tool/01-content.mdx
@@ -2,7 +2,9 @@
 
 How often have you tried to remember something important after a busy day and felt it slip through your mental grasp? This question might seem familiar to you if you are a knowledge worker. Nowadays, knowledge workers experience an endless onslaught of demands on their time where their innate curiosity and imagination wither away under the weight of obligations. We are surrounded by knowledge yet starving for wisdom.
 
-> You might call the mantra of the modern knowledge worker: "I'm so busy".
+> You might call the mantra of the modern knowledge worker: "I'm so busy"
+> 
+> -- <cite>Benjamin Franklin</cite>
 
 Research indicates that knowledge workers spend a great deal of their time - _an average of 40%_ - looking for information and discretionary activities that offer little personal satisfaction. As a result, we instinctively devote time to tedious, non-value-added activities that make us feel busy and thus important. At the same time, organisations constantly strive to do more with less and pile on as many responsibilities as knowledge workers are willing to accept. As a result, many workers report historic levels of stress, distraction and hours logged, even resulting in a global trend called [The Great Resignation](https://en.wikipedia.org/wiki/Great_Resignation).
 
