update blogpost content

--- a/pages/blog/building-a-second-brain-as-networked-thinking-tool/01-content.mdx
+++ b/pages/blog/building-a-second-brain-as-networked-thinking-tool/01-content.mdx
@@ -4,7 +4,7 @@ How often have you tried to remember something important after a busy day and fe
 
 > You might call the mantra of the modern knowledge worker: "I'm so busy"
 > 
-> -- <cite>Benjamin Franklin</cite>
+> -- <cite>Sam Davies</cite>
 
 Research indicates that knowledge workers spend a great deal of their time - _an average of 40%_ - looking for information and discretionary activities that offer little personal satisfaction. As a result, we instinctively devote time to tedious, non-value-added activities that make us feel busy and thus important. At the same time, organisations constantly strive to do more with less and pile on as many responsibilities as knowledge workers are willing to accept. As a result, many workers report historic levels of stress, distraction and hours logged, even resulting in a global trend called [The Great Resignation](https://en.wikipedia.org/wiki/Great_Resignation).
 
@@ -21,7 +21,8 @@ So, I began researching personal knowledge management more intensively. I found 
 The nature of work is changing rapidly: job hopping, outsourcing and automation and large mergers and acquisitions. We can now expect to spend only a few months to a few years with one organisation. These constant transitions mean our ability to capture, organise and retrieve our ideas and apply and transfer them effectively from project to project and company to company becomes more important than ever. In this fast-paced world, increasingly driven by innovation and creativity, not having a personal knowledge management (PKM) system means you are not fully leveraging what you learn. You are not collecting your ideas and making valuable connections between them.
 
 > If you don’t have a helpful system for storing bad ideas, you probably don’t have one for filing good ones.
->
+> 
+> -- <cite>Tiago Forte</cite>
 
 The purpose of a PKM system is to allow us to be more creative and spontaneous or, as David Allen puts it: _“... a system for getting things out of your head and into objective, reviewable format”_. This system helps open up your conscious mind to focus on creating novel value. Creating such a system is a design problem. And like all design problems, it must balance and trade-off multiple priorities against each other: the balance between order and uncertainty; between being goal-directed and allowing our thinking to lead us to unexpected places; between supporting our existing viewpoints and challenging us with new ones. It can help us cultivate an Opposable Mind - the ability to hold two opposing ideas in our mind simultaneously - without taxing our ability to get things done. 
 
@@ -32,7 +33,8 @@ However, as nice as this sounds, the journey starts with a frictionless and prac
 When you explore the world of PKM, you quickly discover many ways to build such a system. There is much information, specialised software tools to choose from and many opposing views of domain experts on the implementation. However, it is essential to keep the end in mind as no matter which system you use; it has to serve you and not the other way around. There are no one-size fits all methods or apps as everyone lives in different environments and works and operates under other circumstances.
 
 > Your system can look chaotic to others, but if it brings you value and delight, it's the right one.
->
+> 
+> -- <cite>David Allen</cite>
 
 After exploring multiple options, I settled on the book Building a Second Brain by Tiago Forte to be a helpful self-help guide in my journey to build my PKM system. That's because it emphasises information management as a mindset rather than a toolset: the shift in mindset from scarcity to abundance, from obligation to service, and finally, from consuming to creating. As knowledge workers, attention is our most scarce and precious resource. The ability to intentionally and strategically allocate our attention is a competitive advantage in a distracted world. Tiago Forte forces you to rethink your relationship with information and its relation to your attention and energy.
 
